added support for molmo model

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ Flask
 byaldi
 torch
 torchvision
-google-generative-ai
+google-generativeai
 openai
 docx2pdf
 qwen-vl-utils
+vllm>=0.6.1.post1
+mistral_common>=1.4.1
+einops
