--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ sentence-transformers==2.2.2
 faiss-cpu
 huggingface_hub
 transformers
-autoawq; sys_platform != 'darwin'
+#autoawq; sys_platform != 'darwin'
 protobuf==3.20.2; sys_platform != 'darwin'
 protobuf==3.20.2; sys_platform == 'darwin' and platform_machine != 'arm64'
 protobuf==3.20.3; sys_platform == 'darwin' and platform_machine == 'arm64'
